# xdapp-starter

./: README.md
contract/: .gitignore  Cargo.toml  README.md
contract/counter/: Cargo.toml  erdpy.json
contract/counter/meta/: Cargo.toml
contract/counter/src/: counter.rs
contract/counter/wallet/: example.dev.pem
contract/xcontract/: Cargo.toml  erdpy.json
contract/xcontract/meta/: Cargo.toml
contract/xcontract/meta/src/: main.rs
contract/xcontract/src/: xcontract.rs
dapp/: package.json
dapp/src/: app.tsx
dapp/src/components/: button.tsx  counter.tsx  loader.tsx
dapp/src/components/helpers/: auth-redirect-wrapper.tsx  page-with-title.tsx
dapp/src/components/layout/: footer.tsx  layout.tsx  navbar.tsx
dapp/src/config/: devnet.ts  routes.ts
dapp/src/contracts/: counter-contract.ts
dapp/src/contracts-abi/: counter.abi.json
dapp/src/css/: global.css
dapp/src/hooks/: use-counter.ts
dapp/src/pages/: dashboard.tsx  home.tsx  login.tsx
